tests/snapshots/wire_format_snapshots__api_node_app_api_decisions.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "decisions": [
    {
      "body": "# API Decision\nUse stable JSON payloads.",
      "date": "2026-04-01",
      "id": "dec.api",
      "informed_by": [
        "res.api"
      ],
      "nodes": [
        "app.api"
      ],
      "path": "meta/decisions/api.md",
      "refines": [],
      "related": [],
      "revisit_triggers": [],
      "revisited": null,
      "status": "accepted",
      "supersedes": [],
      "title": "API Decision"
    }
  ],
  "node": "app.api",
  "schema_version": 6
}
