tests/snapshots/wire_format_snapshots__api_node_app_api_rationale.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "decision_index": {
    "dec.api": {
      "date": "2026-04-01",
      "status": "accepted"
    },
    "dec.queue": {
      "date": "2026-04-02",
      "status": "proposed"
    }
  },
  "decisions": [
    {
      "body": "# API Decision\nUse stable JSON payloads.",
      "date": "2026-04-01",
      "id": "dec.api",
      "informed_by": [
        "res.api"
      ],
      "nodes": [
        "app.api"
      ],
      "path": "meta/decisions/api.md",
      "ratification": "binding",
      "ratified_by": "maintainer",
      "refined_by": [],
      "refines": [],
      "related": [],
      "revisit_triggers": [],
      "revisited": null,
      "status": "accepted",
      "superseded_by": [],
      "supersedes": [],
      "title": "API Decision"
    }
  ],
  "node": "app.api",
  "research": [
    {
      "body": "# API Research\nStudied payload evolution.",
      "date": "2026-03-20",
      "id": "res.api",
      "nodes": [
        "app.api"
      ],
      "path": "meta/research/api.md",
      "sources": [
        "src.api"
      ],
      "title": "API Research"
    }
  ],
  "schema_version": 11,
  "sources": [
    {
      "body": "# API Source\nBootstrap evidence.",
      "date": "2026-03-19",
      "file": "docs-source.txt",
      "id": "src.api",
      "path": "meta/sources/api.md",
      "title": "API Source",
      "type": "note",
      "verification": "verified"
    }
  ]
}
