tests/snapshots/wire_format_snapshots__api_node_app_api_research.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "node": "app.api",
  "research": [
    {
      "body": "# API Research\nStudied payload evolution.",
      "date": "2026-03-20",
      "id": "res.api",
      "nodes": [
        "app.api"
      ],
      "path": "meta/research/api.md",
      "sources": [
        "src.api"
      ],
      "title": "API Research"
    }
  ],
  "schema_version": 7
}
