tests/snapshots/wire_format_snapshots__api_node_app_api_sources.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "node": "app.api",
  "schema_version": 1,
  "sources": [
    {
      "body": "# API Source\nBootstrap evidence.",
      "date": "2026-03-19",
      "file": "docs-source.txt",
      "id": "src.api",
      "path": "meta/sources/src.api.md",
      "title": "API Source",
      "type": "note",
      "verification": "verified"
    }
  ]
}
