tests/snapshots/wire_format_snapshots__api_node_app_api_todos.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "node": "app.api",
  "relation_statuses": {
    "dec.api": "accepted"
  },
  "schema_version": 12,
  "todos": [
    {
      "blocked_by": [],
      "body": "# API Todo\nShip the endpoint.",
      "created": "2026-04-01",
      "node": "app.api",
      "parent": null,
      "path": "meta/todos/todo.api.md",
      "related": [
        "dec.api"
      ],
      "satisfies": "status.contract",
      "status": "open",
      "title": "API Todo"
    }
  ]
}
