tests/snapshots/wire_format_snapshots__api_pending.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "pending": [
    {
      "age_days": "[age]",
      "changed_since_review": false,
      "id": "dec.queue",
      "nodes": [
        "app.core"
      ],
      "ratification": "binding",
      "refined_by": [],
      "reopen_command": "cairn pending dec.queue",
      "ruling_prompt": "Say your ruling in this session (accept, reject, or ask); the options above carry the recommendation.",
      "ruling_summary": "Awaiting ratification.",
      "subject_hash": null,
      "superseded_by": []
    }
  ],
  "schema_version": 12
}
