tests/snapshots/wire_format_snapshots__api_status.snap
---
source: tests/wire_format_snapshots.rs
expression: value
---
{
  "active_changes": [],
  "next_recommended": {
    "command": "cairn order",
    "node": null,
    "rank": 4,
    "source": "finding",
    "title": "An ordering cycle was detected in the blueprint (dependency edges, or containment contradicting a dependency edge). Review and fix the conflicting edges."
  },
  "open_todos": [
    {
      "created": "2026-04-01",
      "node": "app.api",
      "path": "<todo>",
      "satisfies": "status.contract",
      "status": "open"
    }
  ],
  "recent_log_entries": [
    "- note: bootstrap log entry"
  ],
  "schema_version": 11
}
